--- a/ui/package.json
+++ b/ui/package.json
@@ -29,9 +29,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "~1.4.0",
     "object-assign": "4.1.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
