--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,11 @@ node_js:
 - '8'
 before_install:
 install:
-- cd ./devops && ./install.sh
-- cd ..
+- ./devops/install.sh
 cache:
   directories:
   - devops/node_modules
   - ui/node_modules
 script:
-  - cd ./devops && ./build.sh && cd ..
-  - cd ./devops && ./deploy.sh && cd ..
+  - ./devops/build.sh
+  - ./devops/deploy.sh
