--- a/ui/package.json
+++ b/ui/package.json
@@ -30,10 +30,13 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "~1.4.0",
+    "@material-ui/icons": "^1.1.0",
+    "classnames": "^2.2.6",
     "object-assign": "4.1.0",
     "react": "16.3.0",
     "react-dom": "16.3.0",
     "react-redux": "5.0.5",
+    "react-router": "^4.3.1",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "3.6.0",
