--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ matrix:
         directories:
           - $HOME/server/.gradle/caches/
           - $HOME/server/.gradle/wrapper/
-
       before_install:
+        - echo $HOME
         - cd $HOME/server
 #      install:
       before_script:
