git rid of the ds store

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
         - ui/node_modules
       script:
         - ./devops/build.sh
+      deploy:
         - ./devops/deploy.sh
 
     - language: java
