--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost/database
 spring.datasource.username=username
 spring.datasource.password=password
+beanstalk.app=c3Software.io
+beanstalk.env=c3softwareio-env
+aws.region=us-east-1
+app.name=c3Software
+app.version=0.0.1
+server.compression.enabled=true
+server.compression.min-response-size=1
+server.connection-timeout=5000
